Product Services First Commit

--- a/Product/src/main/resources/application.properties
+++ b/Product/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.data.mongodb.database=flipkart
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
+server.port = 8081
+spring.application.name = Product-Catalog-Service
